[package]
name = "bananagrabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version = "3.0.14", features = ["derive", "cargo"]}
color-backtrace = { version = "0.5" }
pretty_env_logger = "0.4"
serde = {version="1", features = ["derive"]}
serde_json = "1"
reqwest = {version= "0.11.9", features = ["json", "native-tls-vendored"]}
tokio = { version = "1.16.1", features = ["full"] }
url = "2.2.2"
serenity = {version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
regex = "1"
lazy_static = "1.4.0"

log = "0.4"
anyhow = "1"
